# hacky-serverless-platform

./: .gitignore  README.md  conda.yml  docker-compose.yml
function_server/: README.md
function_server/builder/: lambda_libs.txt
function_server/client/: index.html
function_server/client/serverless-client/: README.md  package-lock.json  package.json
function_server/client/serverless-client/public/: index.html
function_server/client/serverless-client/src/: App.vue
function_server/client/serverless-client/src/components/: Editor.vue  ServerlessInstances.vue  ServerlessSubmissions.vue  TriggerInstances.vue
function_server/client/serverless-client/src/router/: index.js
function_server/client/serverless-client/src/views/: About.vue  Home.vue  InstanceViewer.vue
function_server/gateway/: gateway.py
function_server/spike/: advanced_return_example.py  function.py  more_advanced_example_s3.py  provision.py  simple_function_example.py
libkvdb/: MANIFEST  README.rst  kvdb.py  kvdb_server.py  setup.py
libkvdb/kvdb/: __init__.py  client.py  kvdb.py  server.py
recv_server/: app.py
wh_server/: README.md  pyproject.toml
wh_server/tests/: test_wh_server.py
wh_server/wh_server/: app.py
