[tool.poetry]
name = "wh_server"
version = "0.1.0"
description = ""
authors = ["Alex Burlacu <alexburlacu1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.64.0"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
